Added unit test for 'ClientSettings'.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
         </developer>
     </developers>
 
+    <dependencies>
+        <!-- Test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <!-- Compiler -->
