--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>Server</module>
         <module>Client</module>
         <module>All</module>
+        <module>Example</module>
     </modules>
 
     <properties>
