--- a/Shared/pom.xml
+++ b/Shared/pom.xml
@@ -28,4 +28,12 @@
 
     <artifactId>cascade-shared</artifactId>
 
+    <dependencies>
+        <!-- Netty -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.5.Final</version>
+        </dependency>
+    </dependencies>
 </project>
